added readme, animal.js, and to-do work for p4

--- a/client/to-do.html
+++ b/client/to-do.html
@@ -8,26 +8,26 @@
 
   <body>
     <header>
-      <h1>Comments</h1>
-      <p>A simple app that allows a user to input comments</p>
+      <h1>2do List</h1>
+      <p>A simple app that allows a user to input 2do list items.</p>
     </header>
 
     <main>
       <section class="comment-input">
-        <p>Add Your Comment:</p>
+        <p>Add an item to the list:</p>
         <input><button>+</button>
       </section>
 
       <section class="comments">
-        <p>This is the first comment!</p>
-        <p>Here's the second one!</p>
-        <p>And this is one more.</p>
-        <p>Here is another one!</p>
+        <p>2do List</p>
+        <p>Start P4 early</p>
+        <p>Review for Final</p>
+        <p>Memorial Day plans</p>
       </section>
     </main>
 
     <footer>
-      <p>this work is released into the public domain</p>
+      <p>This work is for CIT 281 Project 4</p>
     </footer>
 
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
